@@ -141,6 +141,13 @@ argument_list|(
 literal|4
 argument_list|)
 decl_stmt|;
+DECL|field|maxPosition
+specifier|private
+name|int
+name|maxPosition
+init|=
+literal|0
+decl_stmt|;
 DECL|field|slop
 specifier|private
 name|int
@@ -301,6 +308,16 @@ argument_list|(
 name|position
 argument_list|)
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|position
+operator|>
+name|maxPosition
+condition|)
+name|maxPosition
+operator|=
+name|position
 expr_stmt|;
 block|}
 comment|/** Returns the set of terms in this phrase. */
@@ -1279,6 +1296,18 @@ argument_list|(
 literal|"\""
 argument_list|)
 expr_stmt|;
+name|String
+index|[]
+name|pieces
+init|=
+operator|new
+name|String
+index|[
+name|maxPosition
+operator|+
+literal|1
+index|]
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1297,10 +1326,41 @@ name|i
 operator|++
 control|)
 block|{
-name|buffer
+name|int
+name|pos
+init|=
+operator|(
+operator|(
+name|Integer
+operator|)
+name|positions
 operator|.
-name|append
+name|get
 argument_list|(
+name|i
+argument_list|)
+operator|)
+operator|.
+name|intValue
+argument_list|()
+decl_stmt|;
+name|String
+name|s
+init|=
+name|pieces
+index|[
+name|pos
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|s
+operator|==
+literal|null
+condition|)
+block|{
+name|s
+operator|=
 operator|(
 operator|(
 name|Term
@@ -1315,26 +1375,105 @@ operator|)
 operator|.
 name|text
 argument_list|()
-argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|s
+operator|=
+name|s
+operator|+
+literal|"|"
+operator|+
+operator|(
+operator|(
+name|Term
+operator|)
+name|terms
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|)
+operator|.
+name|text
+argument_list|()
+expr_stmt|;
+block|}
+name|pieces
+index|[
+name|pos
+index|]
+operator|=
+name|s
+expr_stmt|;
+block|}
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|pieces
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
 if|if
 condition|(
 name|i
-operator|!=
-name|terms
-operator|.
-name|size
-argument_list|()
-operator|-
-literal|1
+operator|>
+literal|0
 condition|)
+block|{
 name|buffer
 operator|.
 name|append
 argument_list|(
-literal|" "
+literal|' '
 argument_list|)
 expr_stmt|;
+block|}
+name|String
+name|s
+init|=
+name|pieces
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|s
+operator|==
+literal|null
+condition|)
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|'?'
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|buffer
 operator|.
