@@ -94,6 +94,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|queryParser
+operator|.
+name|QueryParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|Directory
@@ -2573,6 +2587,95 @@ argument_list|(
 name|query
 argument_list|,
 name|searcher
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testToString
+specifier|public
+name|void
+name|testToString
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|StopAnalyzer
+name|analyzer
+init|=
+operator|new
+name|StopAnalyzer
+argument_list|()
+decl_stmt|;
+name|StopFilter
+operator|.
+name|setEnablePositionIncrementsDefault
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|QueryParser
+name|qp
+init|=
+operator|new
+name|QueryParser
+argument_list|(
+literal|"field"
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|qp
+operator|.
+name|setEnablePositionIncrements
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|PhraseQuery
+name|q
+init|=
+operator|(
+name|PhraseQuery
+operator|)
+name|qp
+operator|.
+name|parse
+argument_list|(
+literal|"\"this hi this is a test is\""
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"field:\"? hi ? ? ? test\""
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"hello"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"field:\"? hi|hello ? ? ? test\""
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
